--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Dinos'R'Us</h1>
+    <h1>dinos'r'us</h1>
     <nav>
       <ul>
         <li><a href="#hadrosaur">Hadrosaur</a></li>
@@ -23,20 +23,20 @@
   <main>
     <h2 id="hadrosaur">HADROSAUR</h2>
     <figure>
-      <img src="images/hadrosaur.jpg">
-      <figcapture class="intro"><p>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</p></figurecapture>
+      <img src="images/hadrosaur.jpg" alt="">
+      <figcaption class="intro">Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
     </figure>
 
     <h2 id="iguanodon">Iguanodon</h2>
     <figure>
-      <img src="images/iguanodon.jpg">
-      <figcapture><p>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</p></figurecapture>
+      <img src="images/iguanodon.jpg" alt="">
+      <figcaption>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcaption>
     </figure>
 
     <h2 id="stegosaurus">Stegosaurus</h2>
     <figure>
-      <img src="images/stegosaurus.jpg">
-      <figcapture><p>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</p></figurecapture>            
+      <img src="images/stegosaurus.jpg" alt="">
+      <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>            
     </figure>
   </main>
 </body>
