Change the name of style.css to main.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Dinosaur design</title>
   <meta name="viewport" content="width=device-width initial-scale=1">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
 </head>
 
@@ -13,9 +13,9 @@
     <h1>dinos'r'us</h1>
     <nav>
       <ul>
-        <li><a href="#hadrosaur">Hadrosaur</a></li>
-        <li><a href="#iguanodon">Iguanodon</a></li>
-        <li><a href="#stegosaurus">Stegosaurus</a></li>
+        <li><a href="#hadrosaur">hadrosaur</a></li>
+        <li><a href="#iguanodon">iguanodon</a></li>
+        <li><a href="#stegosaurus">stegosaurus</a></li>
       </ul>
     </nav>
   </header>
