--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
   <header>
-    <h1>dinos'r'us</h1>
+    <h1><img src="images/dinos-r-us.svg" alt=""></h1>
     <nav>
-      <ul>
+      <ol>
         <li><a href="#hadrosaur">hadrosaur</a></li>
         <li><a href="#iguanodon">iguanodon</a></li>
         <li><a href="#stegosaurus">stegosaurus</a></li>
-      </ul>
+      </ol>
     </nav>
   </header>
 
