--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1><img src="images/dinos-r-us.svg" alt=""></h1>
+    <h1><img src="images/dinos-r-us.svg" alt="Dinos'R'Us"></h1>
     <nav>
       <ol>
         <li><a href="#hadrosaur">hadrosaur</a></li>
@@ -40,14 +40,5 @@
     </figure>
   </main>
 </body>
-
-
-
-
-
-
-
-
-
 
 </html>
