--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <h1><img src="images/dinos-r-us.svg" alt="Dinos'R'Us"></h1>
     <nav>
       <ol>
-        <li><a href="#hadrosaur">hadrosaur</a></li>
-        <li><a href="#iguanodon">iguanodon</a></li>
-        <li><a href="#stegosaurus">stegosaurus</a></li>
+        <li><a href="#hadrosaur">Hadrosaur</a></li>
+        <li><a href="#iguanodon">Iguanodon</a></li>
+        <li><a href="#stegosaurus">Stegosaurus</a></li>
       </ol>
     </nav>
   </header>
 
   <main>
-    <h2 id="hadrosaur">HADROSAUR</h2>
+    <h2 id="hadrosaur">Hadrosaur</h2>
     <figure>
       <img src="images/hadrosaur.jpg" alt="">
       <figcaption class="intro">Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
